--- a/dataset.css
+++ b/dataset.css
@@ -68,7 +68,7 @@ table {
 }
 
 td {
-    padding-top: 3mm;
+    /*padding-top: 3mm;*/
 }
 
 .sectionName {
